Fixed background image on mobile and other CCS tweaks

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,27 +1,28 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400);
 @import url(https://fonts.googleapis.com/css?family=Bitter:400);
 
-html,body {
-	height:100%;
-    background:center no-repeat fixed url('../img/coverPhoto.jpg');
-    background-size: cover;
-		background-position: 20% 0%;
-    color:#444;
-    font-family: 'Lato', sans-serif;
+html, body {
+	height: 100%;
+	color: #444;
+	font-family: 'Lato', sans-serif;
 }
 
-@media (min-width:768px) {
-    h1 {
-        font-size:68px;
-    }
+body {
+
+}
+
+@media (min-width: 768px) {
+	h1 {
+		font-size: 68px;
+	}
 }
 
 a {
-    color:#999;
+	color: #999;
 }
 
 a:hover {
-    color:#111;
+	color: #111;
 }
 
 .quote {
@@ -29,40 +30,40 @@ a:hover {
 }
 
 .btn,.well,.panel {
-    border-radius:0;
+	border-radius: 0;
 }
 
 .btn-danger {
-    border: 1px solid #ff7a00;
-    background-color:#ff6600;
-}
-
-.btn-danger:hover {
-    border: 1px solid #ff6600;
-    background-color:#ff7a00;
-}
-
-.btn-danger:active {
-	border: 1px solid #ff6600;
-    background-color:#ff4d00;
+	border: 1px solid #ff7a00;
+	background-color: #ff6600;
 }
 
 .btn-danger:link {
 	border: 1px solid #ff7a00;
-    background-color:#ff6600;
+	background-color: #ff6600;
+}
+
+.btn-danger:hover {
+	border: 1px solid #ff6600;
+	background-color: #ff7a00;
+}
+
+.btn-danger:active {
+	border: 1px solid #ff6600;
+	background-color: #ff4d00;
 }
 
 .text-danger, a.text-danger {
-    color:#ff6600;
+	color: #ff6600;
 }
 
 .btn-huge {
-    padding:17px 22px;
-    font-size:22px;
+	padding: 17px 22px;
+	font-size: 22px;
 }
 
 .lato {
-    font-family: 'Lato', sans-serif;
+	font-family: 'Lato', sans-serif;
 }
 
 .bitter {
@@ -70,34 +71,33 @@ a:hover {
 }
 
 .icon-bar {
-	background-color:#fff;
+	background-color: #fff;
 }
 
 .navbar-trans {
-	background-color:#2b2b2b;
-    color:#cdcdcd;
-    border-width:0;
+	background-color: #2b2b2b;
+	color: #fff;
+	border-width: 0;
 }
 
 .navbar-trans .navbar-brand, .navbar-trans >.container-fluid .navbar-brand {
-    padding: 14px;
-    color:#ff6600;
+	padding: 14px;
+	color: #fff;
 }
 
 .navbar-trans li>a:focus,.navbar-trans li.active {
-	background-color:#ff6600;
-	color:#333;
+	background-color: #ff6600;
+	color: #333;
 }
 
 .navbar-trans li>a:hover {
-	background-color:#ff6600;
-	color:#fff;
-	opacity:0.5;
+	background-color: #ff7a00;
+	color: #fff;
 }
 
 .navbar-trans a{
-    color:#cdcdcd;
-    letter-spacing:1px;
+	color: #fff;
+	letter-spacing: 1px;
 }
 
 .navbar-trans .form-control:focus {
@@ -108,46 +108,46 @@ a:hover {
 }
 
 .scroll-down {
-  position: absolute;
-  left: 50%;
-  bottom: 40px;
-  border: 2px solid #fff;
-  border-radius: 50%;
-  height: 50px;
-  width: 50px;
-  margin-left: -15px;
-  display: block;
-  padding: 7px;
-  text-align: center;
-  z-index:-1
+	position: absolute;
+	left: 50%;
+	bottom: 40px;
+	border: 2px solid #fff;
+	border-radius: 50%;
+	height: 50px;
+	width: 50px;
+	margin-left: -15px;
+	display: block;
+	padding: 7px;
+	text-align: center;
+	z-index: -1;
 }
 
 .scroll-up {
-  position: fixed;
-  display: none;
-  z-index: 999;
-  bottom: 2em;
-  right: 2em;
+	position: fixed;
+	display: none;
+	z-index: 999;
+	bottom: 2em;
+	right: 2em;
 }
 
 .scroll-up a {
-  background-color: rgba(135, 135, 135, 0.5);
-  display: block;
-  width: 35px;
-  height: 35px;
-  text-align: center;
-  color: #fff;
-  font-size: 15px;
-  line-height: 30px;
+	background-color: rgba(135, 135, 135, 0.5);
+	display: block;
+	width: 35px;
+	height: 35px;
+	text-align: center;
+	color: #fff;
+	font-size: 15px;
+	line-height: 30px;
 }
 
 section {
 	position: relative;
 	padding-top:70px;
-    padding-bottom:50px;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    transform-style: preserve-3d;
+	padding-bottom:50px;
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	transform-style: preserve-3d;
 }
 
 #home {
@@ -158,7 +158,7 @@ section {
 
 
 #home, #signup {
-	background-color: rgba(64,25,0,0.3);
+	background-color: rgba(64,25,0,0.4);
 	color:#fff;
 }
 
@@ -230,23 +230,44 @@ section {
 
 footer {
 	background-color:#2b2b2b;
-    color:#ddd;
-    min-height:100px;
-    padding-top:20px;
-    padding-bottom:40px;
+	color:#ddd;
+	min-height:100px;
+	padding-top:20px;
+	padding-bottom:40px;
 }
 
 footer .nav>li>a {
-    padding: 3px;
-    color: #ff6600;
+	padding: 3px;
+	color: #ff6600;
 }
 
 footer .nav>li>a:hover {
-    background-color:transparent;
+	background-color:transparent;
 	color:#fff;
 }
 
 .logo {
 	margin: 5px;
 	margin-right: 40px;
+}
+
+
+div.cover {
+	z-index: -100;
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	overflow: hidden;
+}
+img.cover {
+	position: absolute;
+	top: 0;
+	left: -100px;
+	right: 0;
+	bottom: -200px;
+	margin: auto;
+	max-width: 300vw;
+	max-height: 300vh;
 }
